Missing penultimate frame in GP interpolation sequence #66941

Closed
opened 2019-07-14 22:15:46 +02:00 by James Griffin · 3 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GT 630M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: 06312c6d2d
Worked: (optional)

Short description of error
When using Interpolate->Sequence with the grease pencil, the interpolation factors for each intermediate frame are incorrectly calculated, resulting in the final step being double the other intermediate steps.sequence_error.blend

You can see this in the attached file by moving between frames 8, 9 and 10.

Exact steps for others to reproduce the error
See attached blend file.

Fix
I don't have the dev tools to double check, but the error is in editors/gpencil/gpencil_interpolate.c, line 1000:
https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/editors/gpencil/gpencil_interpolate.c

The + 1 is superfluous, the two lines calculating factor should be:

998       /* get interpolation factor */
 999       factor = (float)(cframe - prevFrame->framenum) /
1000                (nextFrame->framenum - prevFrame->framenum);

Obviously in principle the 'framenum's of the adjacent frames should never be equal, but I don't know the code well enough to comment.

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GT 630M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: `06312c6d2d` Worked: (optional) **Short description of error** When using Interpolate->Sequence with the grease pencil, the interpolation factors for each intermediate frame are incorrectly calculated, resulting in the final step being double the other intermediate steps.[sequence_error.blend](https://archive.blender.org/developer/F7608853/sequence_error.blend) You can see this in the attached file by moving between frames 8, 9 and 10. **Exact steps for others to reproduce the error** See attached blend file. **Fix** I don't have the dev tools to double check, but the error is in editors/gpencil/gpencil_interpolate.c, line 1000: [[ https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/editors/gpencil/gpencil_interpolate.c ]] The + 1 is superfluous, the two lines calculating factor should be: ``` 998 /* get interpolation factor */ 999 factor = (float)(cframe - prevFrame->framenum) / 1000 (nextFrame->framenum - prevFrame->framenum); ``` Obviously in principle the 'framenum's of the adjacent frames should never be equal, but I don't know the code well enough to comment.
Author

Added subscriber: @MagnumOctopus

Added subscriber: @MagnumOctopus
Antonio Vazquez self-assigned this 2019-07-15 10:00:26 +02:00

This issue was referenced by 69aa5bba4f

This issue was referenced by 69aa5bba4f0ccd9e95ce2eb811e0f7089fbb5574

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66941
No description provided.