Fix T66941: GPencil wrong interpolation calculation for last keyframe

The range used for frames was wrong and the last keyframe was way off of the correct place.

Thanks to @MagnumOctopus for catching the bug.